Transition to java 11+
Removes/reworks functions deprecated in java 9, including the change
from system class loader no longer being a url class loader,
and asm library had to be updated

Now works with tests passing with both java 8 and 15,
but ant needs to be updated to do installer build